[project]
name = "sami-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "anndata>=0.11.4",
    "chainlit>=2.4.400",
    "harmonypy>=0.0.10",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "leidenalg>=0.10.2",
    "mcp[cli]>=1.6.0",
    "nbconvert>=7.16.6",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=19.0.1",
    "pygraphviz>=1.14",
    "python-dotenv>=1.1.0",
    "rpy2>=3.5.17",
    "scanpy>=1.11.1",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
